# Project_FastApi

./: dev.env  main.py  pre_commit.yaml  pyproject.toml  service_version.py
Deployment/: Dockerfile  docker-compose.yaml  entrypoint.sh
alembic/: env.py
alembic/versions/: 17bd443feffb_store.py  96e81a0edabe_item.py
src/api/routes/: healthcheck.py  route.py
src/core/: config.py  custom_logging.py  events.py
src/database/: connection.py  events.py
src/database/dao/Crud/: Crud.py
src/database/dao/Schema/: Schema.py
src/database/dao/models/: model.py
src/exception/: exception.py  exception_handlers.py
src/utils/: route_utils.py
